<resources>
    <string name="app_name">TiendaApp2</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_button_text">Registrar</string>
    <string name="goregister_button_text">Registrarse</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <string name="logout_button_text">Cerrar sesión</string>
    <string name="welcome_message">Bienvenido a la aplicación</string>
    <string name="Perfil">Perfil</string>
    <string name="Lista_de_Productos">Lista de Productos</string>
    <string name="Carrito_de_Compras">Carrito de Compras</string>
    <string name="Geolocalización">Geolocalización</string>
    <string name="imagen_de_perfil_del_usuario">Imagen de perfil del usuario</string>
    <string name="subir_imagen">Subir imagen</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="correo_user_example_com">Correo: user@example.com</string>
    <string name="product_name">Product Name</string>
    <string name="_0_00">$0.00</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_price_format">$%1$.2f</string>
    <string name="product_image_description">Imagen del producto</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="product_name_carrito">Product Name carrito</string>
    <string name="_0_00_">$0.00</string>
    <string name="cantidad_1">Cantidad: 1</string>
    <string name="agregar">+</string>
    <string name="quitar">-</string>
    <string name="eliminar">Eliminar</string>
    <string name="total_text">Total: $%1$.2f</string>
    <string name="product_price">\$%1$.2f</string>
    <string name="product_quantity">Cantidad: %1$d</string>
    <string name="admob_app_id">ca-app-pub-0321487245315377~9048061528</string>

</resources>